# CTI_Collector

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/reader2pdf/: __init__.py  browser.py  browser_async.py  cli.py  collector.py  constants.py  html.py  readability.py  utils.py
src/reader2pdf/assets/: Readability.js
