[project]
name = "reader2pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "typer>=0.19.1",
]

[project.scripts]
reader2pdf = "reader2pdf.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
