[project]
name = "reader2pdf"
version = "0.1.0"
description = "Convert web articles to PDF using Playwright, but prettier with Readability.js"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "rich>=14.1.0",
    "typer>=0.19.1",
]

[project.scripts]
reader2pdf = "reader2pdf.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
